[package]
name = "terms"
version = "0.1.0"
authors = ["Timothée Haudebourg <timothee.haudebourg@irisa.fr>"]
edition = "2018"
categories = ["data-structures", "science"]
keywords = ["term", "pattern", "rewriting", "tree"]
description = "Tree terms and patterns data structures"
repository = "https://github.com/regular-pv/terms"
documentation = "https://docs.rs/terms"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
rand = "0.7.0"
